// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`live-reporting Renders \`live-reporting\` with custom props 1`] = `
<settings-button-field-stub
  addable="true"
  removable="true"
  title="Set a custom date range"
/>
`;

exports[`live-reporting Renders \`live-reporting\` with default props 1`] = `
<settings-button-field-stub
  addable="true"
  isempty="true"
  removable="true"
  title="Set a custom date range"
/>
`;
